--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
-DB_HOST=votre_vps_host
-DB_USER=bdduser
-DB_PASSWORD=G6bdd$!
-DB_NAME=nom_de_votre_base_de_donnees
-JWT_SECRET=your_jwt_secret
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=projetannuelb2
+JWT_SECRET=0e8d4e17022961377d2f681b1457612
