--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.2",
+    "@types/sequelize": "^4.28.20",
     "typescript": "^5.4.5"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.0",
+    "sequelize": "^6.37.3",
     "ts-node": "^10.9.2",
     "typedi": "^0.10.0",
     "undici-types": "^5.26.5"
